# vpn-client

./: .gitignore  Cargo.toml
client/: build.rs
client-gui/: Cargo.toml  app-manifest.rc  build.rs
client-gui/src/: logger.rs  main.rs  vpn_externs.rs
client-gui/src/gui/: app.rs  message.rs  mod.rs  state.rs  styles.rs
client-gui/src/gui/components/: header.rs  sidebar.rs
client-gui/src/gui/views/: connection_view.rs  mod.rs  settings_view.rs
client/src/: main.rs
tunnel_lib/: Cargo.toml
tunnel_lib/src/: bufferpool.rs  desktop_routemanager.rs  key_management.rs  lib.rs  messages.rs  sock_ops.rs  tasks.rs  tunnel.rs  vpnclient.rs
tunnel_lib/src/messages/: authdata.rs  constants.rs  decrypted.rs  encrypted.rs  handshake.rs  handshake_response.rs  mod.rs  traits.rs  tunnel_settings.rs
