[package]
name = "client-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
iced = {version = "0.13.1", features = ["tokio", "image"]}
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
fern = "0.6"
chrono = "0.4"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"